# zlig

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/demo/: .gitignore  pyproject.toml
examples/demo/src/demo/: __init__.py  demo.c
src/zlig/: __init__.py  _wheels.py  build.zig.jinja2
