[build-system]
requires = ["zlig"]
build-backend = "zlig"

[project]
name = "demo"
version = "0.1.0"
description = "Demo for Zlig"
authors = [{name = "Tzu-ping Chung", email = "uranusjr@gmail.com"}]
license = {file = "../../LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.0"

[tool.flit.sdist]
exclude = ["src/demo/*.so"]

[tool.zlig]
extensions = [{name = "demo.demo", sources = ["src/**/*.c"]}]
